# c-data-structures

./: .gitignore  CMakeLists.txt  README.md
include/: binary_search_tree.h  heap.h
src/: binary_search_tree.c  heap.c
